examples/test/testpolicy15267.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15267
  namespace: namespace78
spec:
  podSelector:
    matchLabels:
      key17: value19
      key30: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value36
      podSelector:
        matchLabels:
          key17: value2
          key34: value28
          key45: value2
